feat: add stilo documentation (#1)
* feat: add components for sidenav

* chore: increase Prettier printWidth

* build: install TailwindCss

* chore: add alias path

* chore: add skipTests schematics

* feat: add docs page components

* feat: add component to show code snippet

* fix: adjust spacing + active nav item color

* chore: increase budget size

* feat: add documentation for installation

* build: add script to build project for production

* feat: add css class to customize scrollbar

* fix: change page component for spacing-scale route

* feat: add component to show hints

* feat: add table component

* feat: add documentation for spacing scale

* perf: allow whitespace in code snippet component

* feat: add documentation for StiloElevation

* perf: use sticky table header up to sm devices

* fix: move router-outlet outside of sidenav component

* feat: add documentation for StiloPositioned

* fix: change name column (replace size with value)

* feat: add documentation for StiloGridGap

* perf: add px in front of value

* feat: add documentation for StiloEdge

* feat: add documentation for StiloSpacing

* feat: add documentation for StiloHeight

* feat: add documentation for StiloWidth

* feat: add documentation for StiloFontSize

* feat: add documentation for StiloFontWeight

* feat: add documentation for StiloLetterSpacing

* feat: add documentation for StiloLineHeight

* feat: add component to show color grid

* fix: adjust color box size

* fix: color grid responsiveness

* perf: add scrollbar

* feat: add documentation for StiloColor

* feat: add documentation for StiloColorOpacity

* feat: add documentation for StiloBorder

* feat: add service to trasform strings

* feat: add documentation for StiloBorderRadius

* feat: add documentation for StiloDivider

* refactor: remove unused config variable

* feat: add documentation for StiloBoxShadow

* refactor: rename op

--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,9 @@
       "component": {
         "changeDetection": "OnPush"
       }
+    },
+    "@schematics/angular:component": {
+      "skipTests": true
     }
   },
   "version": 1,
@@ -34,10 +37,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -95,10 +95,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         },
