--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
-    "lint": "tsc --noEmit && eslint . --ext js,ts,json --quiet --fix",
+    "lint": "tsc --noEmit && eslint src/**/*.ts --quiet --fix",
     "format": "prettier src/**/*.ts --write",
     "e2e": "ng e2e"
   },
@@ -18,7 +19,6 @@
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
-    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
@@ -27,6 +27,7 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
@@ -36,6 +37,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
+    "autoprefixer": "^10.2.5",
     "codelyzer": "^6.0.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
@@ -48,9 +50,12 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "postcss": "^8.2.15",
+    "postcss-loader": "^5.3.0",
     "prettier": "^2.3.0",
     "prettier-eslint": "^12.0.0",
     "protractor": "~7.0.0",
+    "tailwindcss": "^2.1.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
